--- a/app/src/main/res/menu/drawer_actions.xml
+++ b/app/src/main/res/menu/drawer_actions.xml
@@ -16,4 +16,8 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/drawer_menu_setting"
+        android:title="@string/action_settings"
+        android:icon="@drawable/ic_settings" />
 </menu>
