--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,12 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="common_item_divider">10dp</dimen>
+    <dimen name="common_setting_item_height">50dp</dimen>
+
+    <dimen name="next_btn_margin">30dp</dimen>
+
+    <!-- text size of app -->
+    <dimen name="text_size_page_title">20sp</dimen>
 </resources>
