完成调用相机功能,edit模块的view层 和presenter层更好地分工。 修改最低api版本为14

--- a/app/src/main/res/layout/command_edit_call_frg.xml
+++ b/app/src/main/res/layout/command_edit_call_frg.xml
@@ -22,6 +22,7 @@
             android:src="@drawable/ic_add_a_photo" />
 
         <TextView
+            android:id="@+id/avatar_text"
             android:layout_below="@id/add_avatar"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/common_item_divider"
