添加选择相机还是相册的dialog

--- a/app/src/main/res/layout/dialog_select_image_type.xml
+++ b/app/src/main/res/layout/dialog_select_image_type.xml
@@ -5,10 +5,12 @@
     android:orientation="vertical">
 
     <RadioGroup
+        android:id="@+id/radio_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <RadioButton
+            android:id="@+id/radio_btn_camera"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/camera"/>
@@ -18,6 +20,7 @@
             android:layout_height="16dp" />
 
         <RadioButton
+            android:id="@+id/radio_btn_gallery"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/gallery"/>
